include/StTrgAPI.vb

	
	'------------------------------------------------------------------------------
	'Other
	'------------------------------------------------------------------------------
	Public Declare Function SetProcessorIdleState Lib "StTrgAPI.dll" Alias "StTrg_SetProcessorIdleState" (ByVal dwAC As System.UInt32, ByVal dwDC As System.UInt32) As integer
	Public Declare Function ResetRootHub Lib "StTrgAPI.dll" Alias "StTrg_ResetRootHub" () As integer
	Public Declare Function GetProcessorIdleState Lib "StTrgAPI.dll" Alias "StTrg_GetProcessorIdleState" (ByRef pdwAC As System.UInt32, ByRef pdwDC As System.UInt32) As integer
	Public Declare Function SetDigitalClamp Lib "StTrgAPI.dll" Alias "StTrg_SetDigitalClamp" (ByVal hCamera As IntPtr, ByVal wValue As System.UInt16) As integer
	Public Declare Function GetDigitalClamp Lib "StTrgAPI.dll" Alias "StTrg_GetDigitalClamp" (ByVal hCamera As IntPtr, ByRef pwValue As System.UInt16) As integer
	Public Declare Function ClearBuffer Lib "StTrgAPI.dll" Alias "StTrg_ClearBuffer" (ByVal hCamera As IntPtr) As integer
	'------------------------------------------------------------------------------
	'BINNING_SUM_MODE
	'------------------------------------------------------------------------------
	Public Const STCAM_BINNING_SUM_MODE_OFF As System.UInt16 = &H0000
	'------------------------------------------------------------------------------
	'DEFECT_PIXEL_CORRECTION_MODE
	'------------------------------------------------------------------------------
	Public Const STCAM_DEFECT_PIXEL_CORRECTION_OFF As System.UInt16 = &H0000
	'------------------------------------------------------------------------------
	'ALC_MODE
	'------------------------------------------------------------------------------
	Public Const STCAM_ALCMODE_OFF As Byte = 0
	Public Const STCAM_ALCMODE_CAMERA_AE_ON As Byte = &H10
	Public Const STCAM_ALCMODE_CAMERA_AGC_ON As Byte = &H20
	Public Const STCAM_ALCMODE_CAMERA_AE_AGC_ON As Byte = &H30
	Public Const STCAM_ALCMODE_PC_AE_AGC_ON As Byte = &H01
	'------------------------------------------------------------------------------
	'BINNING_SUM_MODE
	'------------------------------------------------------------------------------
	Public Const STCAM_BINNING_SUM_MODE_H As System.UInt16 = &H0001
	'------------------------------------------------------------------------------
	'DEFECT_PIXEL_CORRECTION_MODE
	'------------------------------------------------------------------------------
	Public Const STCAM_DEFECT_PIXEL_CORRECTION_ON As System.UInt16 = &H0001
	'------------------------------------------------------------------------------
	'BINNING_SUM_MODE
	'------------------------------------------------------------------------------
	Public Const STCAM_BINNING_SUM_MODE_V As System.UInt16 = &H0100
	'------------------------------------------------------------------------------
	'ALC_MODE
	'------------------------------------------------------------------------------
	Public Const STCAM_ALCMODE_PC_AE_ON As Byte = &H02
	Public Const STCAM_ALCMODE_PC_AGC_ON As Byte = &H03
	Public Const STCAM_ALCMODE_PC_AE_AGC_ONESHOT As Byte = &H04
	Public Const STCAM_ALCMODE_PC_AE_ONESHOT As Byte = &H05
	Public Const STCAM_ALCMODE_PC_AGC_ONESHOT As Byte = &H06
	'------------------------------------------------------------------------------
	'ERROR_STCAM
	'------------------------------------------------------------------------------
	Public Const ERR_EXPOSURE_END_DROPPED As System.UInt32 = &HE0000001UI
	Public Const ERR_IMAGE_DATA_DROPPED As System.UInt32 = &HE0000002UI
	Public Const ERR_TIMEOUT_ST2EE As System.UInt32 = &HE0000003UI
	Public Const ERR_TIMEOUT_TE2EE As System.UInt32 = &HE0000004UI
	Public Const ERR_TIMEOUT_EE2TE As System.UInt32 = &HE0000005UI
	Public Const ERR_TIMEOUT_RO2TE As System.UInt32 = &HE0000006UI
	Public Const ERR_INVALID_FUNCTION_WHILE_TRANSFERRING As System.UInt32 = &HE0000100UI
	'------------------------------------------------------------------------------
	'WM_STCAM
	'------------------------------------------------------------------------------
	Public Const WM_STCAM_TRANSFER_END As integer = &HB101
	Public Const WM_STCAM_EXPOSURE_END As integer = &HB102
	Public Const WM_STCAM_RCV_ERROR As integer = &HB103
	'------------------------------------------------------------------------------
	'COLOR_ARRAY
	'------------------------------------------------------------------------------
	Public Const STCAM_COLOR_ARRAY_MONO As System.UInt16 = &H0001
	Public Const STCAM_COLOR_ARRAY_RGGB As System.UInt16 = &H0002
	Public Const STCAM_COLOR_ARRAY_GRBG As System.UInt16 = &H0003
	Public Const STCAM_COLOR_ARRAY_GBRG As System.UInt16 = &H0004
	Public Const STCAM_COLOR_ARRAY_BGGR As System.UInt16 = &H0005
	'------------------------------------------------------------------------------
	'SCAN_MODE
	'------------------------------------------------------------------------------
	Public Const STCAM_SCAN_MODE_NORMAL As System.UInt16 = &H0000
	Public Const STCAM_SCAN_MODE_PARTIAL_2 As System.UInt16 = &H0001
	Public Const STCAM_SCAN_MODE_PARTIAL_4 As System.UInt16 = &H0002
	Public Const STCAM_SCAN_MODE_PARTIAL_1 As System.UInt16 = &H0004
	Public Const STCAM_SCAN_MODE_VARIABLE_PARTIAL As System.UInt16 = &H0008
	Public Const STCAM_SCAN_MODE_BINNING As System.UInt16 = &H0010
	Public Const STCAM_SCAN_MODE_BINNING_PARTIAL_1 As System.UInt16 = &H0020
	Public Const STCAM_SCAN_MODE_BINNING_PARTIAL_2 As System.UInt16 = &H0040
	Public Const STCAM_SCAN_MODE_BINNING_PARTIAL_4 As System.UInt16 = &H0080
	Public Const STCAM_SCAN_MODE_BINNING_VARIABLE_PARTIAL As System.UInt16 = &H0100
	Public Const STCAM_SCAN_MODE_AOI As System.UInt16 = &H8000
	'------------------------------------------------------------------------------
	'PIXEL_FORMAT
	'------------------------------------------------------------------------------
	Public Const STCAM_PIXEL_FORMAT_08_MONO_OR_RAW As System.UInt32 = &H00000001UI
	Public Const STCAM_PIXEL_FORMAT_24_BGR As System.UInt32 = &H00000004UI
	Public Const STCAM_PIXEL_FORMAT_32_BGR As System.UInt32 = &H00000008UI
	'------------------------------------------------------------------------------
	'PIXEL_FORMAT_FOR_SAVE
	'------------------------------------------------------------------------------
	Public Const STCAM_PIXEL_FORMAT_10_MONO_OR_RAW As System.UInt32 = &H00000010UI
	'------------------------------------------------------------------------------
	'PIXEL_FORMAT
	'------------------------------------------------------------------------------
	Public Const STCAM_PIXEL_FORMAT_48_BGR As System.UInt32 = &H00000100UI
	'------------------------------------------------------------------------------
	'PIXEL_FORMAT_FOR_SAVE
	'------------------------------------------------------------------------------
	Public Const STCAM_PIXEL_FORMAT_12_MONO_OR_RAW As System.UInt32 = &H00000020UI
	'------------------------------------------------------------------------------
	'PIXEL_FORMAT
	'------------------------------------------------------------------------------
	Public Const STCAM_PIXEL_FORMAT_64_BGR As System.UInt32 = &H00000200UI
	'------------------------------------------------------------------------------
	'PIXEL_FORMAT_FOR_SAVE
	'------------------------------------------------------------------------------
	Public Const STCAM_PIXEL_FORMAT_16_MONO_OR_RAW As System.UInt32 = &H00000002UI
	'------------------------------------------------------------------------------
	'COLOR_INTERPOLATION
	'------------------------------------------------------------------------------
	Public Const STCAM_COLOR_INTERPOLATION_NONE_MONO As Byte = 0
	Public Const STCAM_COLOR_INTERPOLATION_NONE_COLOR As Byte = 1
	Public Const STCAM_COLOR_INTERPOLATION_NEAREST_NEIGHBOR As Byte = 2
	Public Const STCAM_COLOR_INTERPOLATION_BILINEAR As Byte = 3
	Public Const STCAM_COLOR_INTERPOLATION_BILINEAR_FALSE_COLOR_REDUCTION As Byte = 5
	Public Const STCAM_COLOR_INTERPOLATION_BICUBIC As Byte = 4
	'------------------------------------------------------------------------------
	'WB
	'------------------------------------------------------------------------------
	Public Const STCAM_WB_OFF As Byte = 0
	Public Const STCAM_WB_MANUAL As Byte = 1
	Public Const STCAM_WB_FULLAUTO As Byte = 2
	Public Const STCAM_WB_ONESHOT As Byte = 3
	'------------------------------------------------------------------------------
	'GAMMA_MODE
	'------------------------------------------------------------------------------
	Public Const STCAM_GAMMA_OFF As Byte = 0
	Public Const STCAM_GAMMA_ON As Byte = 1
	Public Const STCAM_GAMMA_REVERSE As Byte = 2
	Public Const STCAM_GAMMA_TABLE As Byte = 255
	'------------------------------------------------------------------------------
	'GAMMA_TARGET
	'------------------------------------------------------------------------------
	Public Const STCAM_GAMMA_TARGET_Y As Byte = 0
	Public Const STCAM_GAMMA_TARGET_R As Byte = 1
	Public Const STCAM_GAMMA_TARGET_GR As Byte = 2
	Public Const STCAM_GAMMA_TARGET_GB As Byte = 3
	Public Const STCAM_GAMMA_TARGET_B As Byte = 4
	'------------------------------------------------------------------------------
	'SHARPNESS
	'------------------------------------------------------------------------------
	Public Const STCAM_SHARPNESS_OFF As Byte = 0
	Public Const STCAM_SHARPNESS_ON As Byte = 1
	'------------------------------------------------------------------------------
	'HUE_SATURATION
	'------------------------------------------------------------------------------
	Public Const STCAM_HUE_SATURATION_OFF As Byte = 0
	Public Const STCAM_HUE_SATURATION_ON As Byte = 1
	'------------------------------------------------------------------------------
	'COLOR_MATRIX
	'------------------------------------------------------------------------------
	Public Const STCAM_COLOR_MATRIX_OFF As Byte = &H00
	Public Const STCAM_COLOR_MATRIX_CUSTOM As Byte = &HFF
	'------------------------------------------------------------------------------
	'MIRROR
	'------------------------------------------------------------------------------
	Public Const STCAM_MIRROR_OFF As Byte = 0
	Public Const STCAM_MIRROR_HORIZONTAL As Byte = 1
	Public Const STCAM_MIRROR_VERTICAL As Byte = 2
	Public Const STCAM_MIRROR_HORIZONTAL_VERTICAL As Byte = 3
	'------------------------------------------------------------------------------
	'MIRROR_CAMERA
	'------------------------------------------------------------------------------
	Public Const STCAM_MIRROR_HORIZONTAL_CAMERA As Byte = 16
	Public Const STCAM_MIRROR_VERTICAL_CAMERA As Byte = 32
	'------------------------------------------------------------------------------
	'ROTATION
	'------------------------------------------------------------------------------
	Public Const STCAM_ROTATION_OFF As Byte = 0
	Public Const STCAM_ROTATION_CLOCKWISE_90 As Byte = 1
	Public Const STCAM_ROTATION_COUNTERCLOCKWISE_90 As Byte = 2
	'------------------------------------------------------------------------------
	'CLOCK_MODE
	'------------------------------------------------------------------------------
	Public Const STCAM_CLOCK_MODE_NORMAL As System.UInt32 = &H00000000UI
	Public Const STCAM_CLOCK_MODE_DIV_2 As System.UInt32 = &H00000001UI
	Public Const STCAM_CLOCK_MODE_DIV_4 As System.UInt32 = &H00000002UI
	Public Const STCAM_CLOCK_MODE_VGA_90FPS As System.UInt32 = &H00000100UI
	'------------------------------------------------------------------------------
	'USBPID
	'------------------------------------------------------------------------------
	Public Const STCAM_USBPID_STC_B33USB As System.UInt16 = &H0705
	Public Const STCAM_USBPID_STC_C33USB As System.UInt16 = &H0305
	Public Const STCAM_USBPID_STC_B83USB As System.UInt16 = &H0805
	Public Const STCAM_USBPID_STC_C83USB As System.UInt16 = &H0605
	Public Const STCAM_USBPID_STC_TB33USB As System.UInt16 = &H0906
	Public Const STCAM_USBPID_STC_TC33USB As System.UInt16 = &H1006
	Public Const STCAM_USBPID_STC_TB83USB As System.UInt16 = &H1106
	Public Const STCAM_USBPID_STC_TC83USB As System.UInt16 = &H1206
